Kubernetes/deploymwnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-deployment
  labels: 
    env: dev
  namespace: default
spec: 
  template:
    metadata:
      labels:
        env: dev
    spec:
      containers:
        - name: my-container
          image: httpd
          ports:
            - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      env: dev
  strategy:
    type: RollingUpdate
