Kubernetes/deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: pqr-deployment
  labels: 
    pqr: dep 

spec: 
  replicas: 2
  selector: 
    matchLabels: 
      pqr: dep 
  template:
    metadata:
      labels: 
        pqr: dep 
    spec: 
      containers:
        - name: pqr-posd
          image: httpd 
          ports: 
            - containerPort: 80
...

---
apiversion: v1 
kind: Service 
metadata: 
  name: pqr-svc
  labels:
    pqr: dev 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP 
  type: NodePort 
  selector:
    pqr: dep
