Kubernetes/pod.yaml
---
apiVersion: v1
kind: Pod
metadata: 
  name: my-pod
  labels:
    env: dev-pod
spec:
  containers:
    - name: my-container
      image: httpd
      ports: 
        - containerPort: 80
...

---
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  labels
    env: dev-pod
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetport: 80
...
