Kubernetes/rc.yaml
---
apiVersion: v1
kind: Service
metdata:
  name: my-svc
  labels: 
    env: dev
  namespace: default
spec:
  ports:
    - name: my-port
      port: 80
      targetPort: 80
      protocol: tcp
  type: NodePort
  selector:
    env: dev
...
