Kubernetes/service.yaml
...
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels: 
    app: demo-app
    env: dev

spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
      app: my-app
---
